feat: add SupervisorPage and WorkerActivitiesView components for activity supervision
- Implemented SupervisorPage for listing users and searching by name.
- Added WorkerActivitiesView for displaying and managing user activities.
- Introduced time validation utilities for managing activity time ranges.
- Created role access hook for managing user permissions based on roles.
- Developed day configuration store for managing special day types and user assignments.
- Added types for day configuration and role management.
- Implemented image optimization utilities for better performance.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preload" href="/Corte_logo.png" as="image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>reac_2.0</title>
+    <meta name="description" content="REAC 2.0 - Sistema de registro de actividades" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <title>REAC 2.0 - Corte Superior de Justicia del Santa</title>
   </head>
   <body>
     <div id="root"></div>
